--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "scripts": {
@@ -21,5 +22,6 @@
   },
   "dependencies": {
     "typescript": "^5.5.3"
-  }
+  },
+  "gitHead": "929cd0694d418f7c67d05672a09903fb5147ce3b"
 }
