--- a/package.json
+++ b/package.json
@@ -1,17 +1,57 @@
 {
+  "private": true,
   "name": "heitu_package",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "lerna run tsc && lerna publish"
+    "init": "rm -rf node_modules && npm install && npm run clean && npm run bootstrap && npm run build",
+    "bootstrap": "lerna bootstrap",
+    "clean": "lerna clean --yes",
+    "build": "father-build",
+    "publish": "lerna publish",
+    "release": "npm run build && npm publish",
+    "start": "dumi dev",
+    "docs:build": "dumi build",
+    "docs:deploy": "gh-pages -d docs-dist",
+    "deploy": "npm run docs:build && npm run docs:deploy",
+    "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
+    "test": "umi-test",
+    "test:update": "umi-test --updateSnapshot",
+    "test:coverage": "umi-test --coverage"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,less,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "prettier --parser=typescript --write"
+    ]
+  },
+  "dependencies": {
+    "@umijs/fabric": "^2.4.11",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "install": "^0.13.0",
+    "react": "^16.12.0"
+  },
   "devDependencies": {
-    "@lerna/legacy-package-management": "^8.1.6",
-    "lerna": "^8.1.6"
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/react-hooks": "^3.2.1",
+    "@types/jest": "^25.1.2",
+    "@umijs/test": "^3.3.4",
+    "dumi": "^1.1.54",
+    "father-build": "^1.17.2",
+    "gh-pages": "^3.0.0",
+    "lerna": "^3.22.1",
+    "lint-staged": "^10.0.7",
+    "ppfish": "^1.7.6",
+    "prettier": "^1.19.1",
+    "react-test-renderer": "^16.13.1",
+    "yorkie": "^2.0.0"
   }
 }
