--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "@heitu_package/ui",
-  "version": "1.0.2",
-  "description": "> TODO: description",
-  "author": "Aimlessly1012 <444769150@qq.com>",
-  "homepage": "",
-  "license": "ISC",
-  "main": "lib/ui.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
+  "name": "@ife/pro-components",
+  "version": "0.0.1",
+  "description": "通用公共组件",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "typings": "lib/index.d.ts",
+  "sideEffects": [
+    "dist/*",
+    "*.less"
   ],
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
-  },
   "scripts": {
-    "test": "node ./__tests__/ui.test.js"
+    "build": "father-build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "ppfish": "^1.7.6",
+    "react": "^16.x"
+  },
+  "author": "ys-fontend",
+  "license": "ISC",
+  "publishConfig": {
+    "registry": ""
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "homepage": "",
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.13.15"
   },
   "dependencies": {
-    "typescript": "^5.5.3"
-  },
-  "gitHead": "929cd0694d418f7c67d05672a09903fb5147ce3b"
+    "@babel/runtime-corejs3": "^7.14.0"
+  }
 }
