--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@umijs/fabric": "^2.4.11",
+    "babel-plugin-import": "^1.13.8",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "install": "^0.13.0",
