--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "dumi dev",
     "docs:build": "dumi build",
     "docs:deploy": "gh-pages -d docs-dist",
-    "deploy": "npm run docs:build && npm run docs:deploy",
+    "deploy": "npm run docs:build && npm run docs:deploy && gh-pages -d dist",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:update": "umi-test --updateSnapshot",
